# RAG_Enterprise

./: .env  chroma_store.py  chroma_test.py  doc_loader.py  example.txt  llm_client.py  pyproject.toml  requirements.txt  retriever.py  text_splitter.py
chroma_db/: chroma.sqlite3
files/: 圆桌会.txt  思维模型.txt  统计学习笔记.txt
rag_core/: all.py  chroma_store.py  doc_loader.py  embedder.py  example.docx  llm_client.py  retriever.py  text_splitter.py
scripts/: add_data.py  chroma_test.py  query_test.py  torch_test.py
test/: code1.py  code2.py  my1.py  my2.py  test1.py
